--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@react-three/fiber": "^7.0.10",
+    "@tensorflow/tfjs": "^3.9.0",
+    "@types/three": "^0.133.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "three": "^0.133.1"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
