--- a/package.json
+++ b/package.json
@@ -7,28 +7,38 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "@react-three/fiber": "^7.0.10",
-    "@tensorflow/tfjs": "^3.9.0",
-    "@types/three": "^0.133.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "three": "^0.133.1"
+    "@react-spring/three": "9.2.6",
+    "@react-three/cannon": "4.0.1",
+    "@react-three/drei": "7.12.6",
+    "@react-three/fiber": "7.0.10",
+    "@tensorflow-models/blazeface": "0.0.7",
+    "@tensorflow-models/handpose": "0.0.7",
+    "@tensorflow-models/pose-detection": "0.0.6",
+    "@tensorflow/tfjs": "3.9.0",
+    "@tensorflow/tfjs-backend-wasm": "3.9.0",
+    "@tensorflow/tfjs-backend-webgl": "3.9.0",
+    "@tensorflow/tfjs-converter": "3.9.0",
+    "@tensorflow/tfjs-core": "3.9.0",
+    "@types/three": "0.133.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "three": "0.133.1"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "^2.1.0",
-    "@snowpack/plugin-react-refresh": "^2.5.0",
-    "@snowpack/plugin-typescript": "^1.2.1",
-    "@snowpack/web-test-runner-plugin": "^0.2.2",
-    "@testing-library/react": "^11.2.6",
-    "@types/chai": "^4.2.17",
-    "@types/mocha": "^8.2.2",
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
-    "@types/snowpack-env": "^2.3.3",
-    "@web/test-runner": "^0.13.3",
-    "chai": "^4.3.4",
-    "prettier": "^2.2.1",
-    "snowpack": "^3.3.7",
-    "typescript": "^4.2.4"
+    "@snowpack/plugin-dotenv": "2.1.0",
+    "@snowpack/plugin-react-refresh": "2.5.0",
+    "@snowpack/plugin-typescript": "1.2.1",
+    "@snowpack/web-test-runner-plugin": "0.2.2",
+    "@testing-library/react": "11.2.6",
+    "@types/chai": "4.2.17",
+    "@types/mocha": "8.2.2",
+    "@types/react": "17.0.4",
+    "@types/react-dom": "17.0.3",
+    "@types/snowpack-env": "2.3.3",
+    "@web/test-runner": "0.13.3",
+    "chai": "4.3.4",
+    "prettier": "2.2.1",
+    "snowpack": "3.3.7",
+    "typescript": "4.2.4"
   }
 }
