--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/three": "0.133.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-use-measure": "^2.0.4",
+    "react-webcam": "^6.0.0",
     "three": "0.133.1"
   },
   "devDependencies": {
