--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,25 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#00b300",
-    "activityBar.activeBorder": "#dfdfff",
-    "activityBar.background": "#00b300",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#dfdfff",
+    "activityBar.activeBackground": "#33ffff",
+    "activityBar.activeBorder": "#ff60ff",
+    "activityBar.background": "#33ffff",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#ff60ff",
     "activityBarBadge.foreground": "#15202b",
-    "editorGroup.border": "#00b300",
-    "panel.border": "#00b300",
-    "sash.hoverBorder": "#00b300",
-    "sideBar.border": "#00b300",
-    "statusBar.background": "#008000",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#00b300",
-    "statusBarItem.remoteBackground": "#008000",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#008000",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#00800099",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "editorGroup.border": "#33ffff",
+    "panel.border": "#33ffff",
+    "sash.hoverBorder": "#33ffff",
+    "sideBar.border": "#33ffff",
+    "statusBar.background": "#00ffff",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#00cccc",
+    "statusBarItem.remoteBackground": "#00ffff",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#00ffff",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#00ffff99",
+    "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "green"
+  "peacock.color": "cyan"
 }
